Iteration I4: Adding a Sidebar, More Administration with system errors

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,4 +28,9 @@
 #       enabled: "ON"
 
 en:
-  hello: "Hello world"
+  order_mailer:
+    received:
+      subject: "We've received your order!"
+    shipped:
+      subject: "Your order has shipped!"
+
